# CarGame

./: .gitignore  Button.cpp  Button.h  ButtonCircle.cpp  ButtonImage.cpp  ButtonImage.h  ButtonToggle.cpp  ButtonToggle.h  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPILE.md  Car.cpp  Car.h  CarAmbulance.cpp  CarAmbulance.h  CarBomb.cpp  CarBus.cpp  CarBus.h  CarGame.sln  CarGame.vcxproj  CarGame.vcxproj.filters  CarLorry.cpp  CarLorry.h  CarRare.cpp  CarRare.h  CarTrain.cpp  CarTrain.hpp  CarType.cpp  CarType.h  EventHandler.cpp  EventHandler.h  FileUtil.cpp  FileUtil.hpp  Game.cpp  Game.h  GameDisplay.cpp  GameDisplay.h  GameDisplayGui.cpp  (+53 more)
.github/workflows/: ccpp.yml
cglauncher/: config.cpp  config.hpp  file.cpp  globals.hpp  icon.rc  launcher.options  macros.hpp  main.cpp  net.cpp  pack.cpp  parse.cpp  strings.cpp  structs.hpp  ui.cpp
cglauncher/libs/ziputils/: zip.cpp
cgui_fork/include/CG/: Button.h  ButtonToggle.h  CG.h  CompoundWidget.h  Config.h  Gui.h  GuiHandler.h  GuiOk.h  GuiYesNo.h  ScrollBar.h  ScrollableCompound.h  Slider.h  Static.h  TextBox.h  Widget.h  WidgetContainer.h
cgui_fork/src/: Button.cpp  ButtonToggle.cpp  CompoundWidget.cpp  Gui.cpp  GuiHandler.cpp  GuiOk.cpp  GuiYesNo.cpp  ScrollBar.cpp  ScrollableCompound.cpp  Slider.cpp  Static.cpp  TextBox.cpp  Widget.cpp  WidgetContainer.cpp
data/: cglaunch.bat  cglaunch.sh
data/res/api/lang/: de_DE.lang  en_US.lang  pl_PL.lang
data/res/cgcore/lang/: de_DE.lang  en_US.lang  pl_PL.lang
data/res/lang/: de_DE.lang  en_US.lang
data/res/textures/bg/: countryside.xcf
docs/: debug_options.md  dll_api.md  dll_api.txt  error_codes.md  error_codes.txt
enc_temp_folder/74bae8695b765647140a6268586d/: ButtonImage.cpp
hmutil/include/HackerMan/Util/: DataFile.cpp  DataFile.hpp  DataMap.cpp  DataMap.hpp  DataParser.cpp  DataParser.hpp  Main.hpp
res/: start.bat  start.sh
res/res/: langnames.hmd
res/res/lang/: config.lang  de_DE.lang  en_US.lang  pl_PL.lang
share/cargame-0.0.4/: data.txt  desktop.ini  start.bat
share/cargame-0.0.5/: README.txt
src/: API.hpp  AbilityBase.cpp  AbilityBase.hpp  ArgMap.hpp  ButtonCircle.cpp  ButtonCircle.h  ButtonImage.cpp  ButtonImage.h  ButtonToggle.cpp  Car.cpp  Car.h  CarAmbulance.h  CarBomb.cpp  CarBomb.hpp  CarBus.cpp  CarBus.h  CarLorry.h  CarRare.cpp  CarRare.h  CarType.cpp  CarType.h  CoreEventHandlers.cpp  CoreEventHandlers.hpp  CoreLoader.cpp  CoreLoader.hpp  DebugLogger.cpp  DebugLogger.hpp  EventHandler.cpp  EventHandler.h  FileUtil.cpp  FileUtil.hpp  GPORegistry.hpp  GPORegistryImplDefault.inl  Game.cpp  Game.h  GameDisplay.cpp  GameDisplay.h  GameDisplayGui.cpp  GameEvent.cpp  GameEvent.h  (+69 more)
src/cargame/: API.cpp  API.hpp  AbilityBase.hpp  ArgMap.hpp  ButtonCircle.h  ButtonImage.cpp  ButtonImage.h  Car.cpp  Car.h  CarType.cpp  CarType.h  DebugLogger.cpp  DebugLogger.hpp  EventHandler.cpp  EventHandler.h  Export.hpp  FileUtil.cpp  FileUtil.hpp  GPORegistry.hpp  GPORegistryImplDefault.inl  Game.cpp  Game.h  GameDisplay.cpp  GameDisplay.h  GameDisplayGui.cpp  GameEvent.h  GameLevel.cpp  GameLoader.cpp  GameLoader.hpp  GameSound.cpp  GameSound.hpp  GameplayObject.cpp  GameplayObject.hpp  GameplayObjectManager.cpp  GameplayObjectManager.hpp  GuiError.hpp  GuiGameOver.cpp  GuiGameOver.h  GuiLanguage.cpp  GuiLanguage.hpp  (+33 more)
src/core/: CMakeLists.txt  CarAmbulance.cpp  CarAmbulance.h  CarBomb.cpp  CarBomb.hpp  CarBus.h  CarLorry.cpp  CarLorry.h  CarRare.cpp  CarRare.h  CarTrain.cpp  CarTrain.hpp  CoreEventHandlers.cpp  CoreEventHandlers.hpp  CoreLoader.cpp  CoreLoader.hpp  PowerBall.cpp  PowerBall.hpp  PowerDamageDecrease.cpp  PowerDamageDecrease.hpp  PowerFence.cpp  PowerFence.hpp  PowerFreeze.cpp  PowerFreeze.hpp  PowerOil.cpp  PowerOil.hpp  PowerPointBoost.cpp  PowerPointBoost.hpp  PowerSpeedIncrease.cpp  PowerSpeedIncrease.hpp  maptype.h  version.rc
src/root/unix/: UnixGameLoader.cpp  UnixGameLoader.hpp  UnixModuleManager.cpp  UnixModuleManager.hpp  main.cpp
src/root/win/: WindowsGameLoader.cpp  WindowsGameLoader.hpp  WindowsModuleManager.cpp  WindowsModuleManager.hpp  icon.rc  main.cpp
updater/: UPDATE.DATA  alpha-0.0.0.DATA  alpha-0.0.3.DATA  alpha-0.0.5.DATA  beta-0.1.1.DATA  beta-0.1.DATA  beta-0.2-v190802-snapshot.DATA  beta-0.2-v190804-snapshot.DATA  beta-0.2-v190901-snapshot.DATA  beta-0.2-v200301-snapshot.DATA  beta-0.2-v200303-snapshot.DATA  beta-0.2-v200401-snapshot.DATA  beta-0.2.DATA
